--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,14 +1,26 @@
+<!doctype html>
+<html lang="en">
+
+<head>
+    <title>Photo App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="/static/css/starter-client.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+</head>
+
+
 <nav class="main-nav">
     <h1>Photo App</h1>
     <ul>
         <li>
             {% if request.url_rule.endpoint == 'api_docs' %}
-                <a href="/">Home</a>
+                <a href="/" class="normal_button">Home</a>
             {% else %}
-                <a href="/api">API Docs</a>
+                <a href="/api" class="normal_button">API Docs</a>
             {% endif %}
         </li>
         <li><span>{{ user.username }}</span></li>
-        <li><a href="#">Sign out</a></li>
+        <li><a href="#" class="normal_button">Sign out</a></li>
     </ul>
 </nav>
