--- a/templates/starter-client.html
+++ b/templates/starter-client.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Photo App</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="/static/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,13 +30,17 @@
 
         <aside>
             <div class="recs">
-                <!-- user profile generated on client-side -->
+                <div class="me">
+                     <!-- user profile generated on client-side -->
+                </div>
                 <div class="others">
                     <!-- client-side suggestions -->
                 </div>
             </div>
         </aside>
     </div>
+
+    <div id="modal-container"></div>
 
 </body>
 </html>
